# cezzis-com-cocktails-rag-agent

./: .gitignore  README.md  cezzis-com-cocktails-rag-agent.code-workspace  cocktail-data-ingestion.code-workspace  data-embedding-agent.code-workspace
data-ingestion/data-embedding-agent/: Dockerfile  Dockerfile-CI  how-to-agent-workflow.txt  how-to.txt  pyproject.toml
data-ingestion/data-embedding-agent/src/: .env  app.py  kafka_cocktail_msg_processor.py
data-ingestion/data-embedding-agent/test/: test_app.py  test_fixtures.py
data-ingestion/data-extraction-agent/: .ruff.toml  Dockerfile  Dockerfile-CI  README.md  makefile  pyproject.toml  pytest-results.xml  requirements-dev.txt  requirements.txt
data-ingestion/data-extraction-agent/src/: .env  app.py  app_logger.py  app_settings.py  cocktail_extraction_msg_processor.py  cocktails_embedding_processor.py  cocktails_extraction_processor.py  ikafka_message_processor.py  kafka_cocktail_msg_processor.py  kafka_consumer.py  kafka_delivery_handler.py  otel.py
data-ingestion/data-extraction-agent/src/cocktails_api/: README.md  pyproject.toml
data-ingestion/data-extraction-agent/src/cocktails_api/cocktails_api_client/: __init__.py
data-ingestion/data-extraction-agent/src/cocktails_api/cocktails_api_client/api/accounts/: change_account_owned_username.py  get_cocktail_ratings.py  manage_favorite_cocktails.py  update_account_owned_profile.py  (+1 more)
data-ingestion/data-extraction-agent/src/cocktails_api/cocktails_api_client/models/: __init__.py  account_accessibility_settings_model.py  account_address_model.py  account_cocktail_rating_model.py  account_cocktail_ratings_model.py  account_cocktail_ratings_rs.py  change_account_owned_email_rq.py  change_account_owned_username_rq.py  cocktail_data_include_model.py  cocktail_favoriting_action_model.py  cocktail_model.py  cocktails_list_model.py  cocktails_list_rs.py  display_theme_model.py  document_format.py  ingredient_filter_model_11.py  ingredient_filter_model_12.py  ingredient_filter_model_2.py  ingredient_filter_model_3.py  ingredient_filter_model_6.py  ingredient_filter_model_7.py  ingredient_model.py  ingredient_requirement_type_model.py  instruction_step_model.py  legal_document_rs.py  manage_favorite_cocktails_rq.py  preparation_type_model.py  uof_m_type_model.py  update_account_owned_accessibility_settings_rq.py  update_account_owned_notification_settings_rq.py  update_account_owned_profile_rq.py  upload_profile_image_rs.py
data-ingestion/data-extraction-agent/src/config/: app_settings.py
data-ingestion/data-extraction-agent/src/message_processors/: cocktails_embedding_processor.py  cocktails_extraction_processor.py
data-ingestion/data-extraction-agent/src/models/: cocktail_models.py
data-ingestion/data-extraction-agent/test/: test_app.py  test_app_settings.py  test_fixtures.py
(+145 files in other folders)
