[project]
name = "cezzis-rag-data-embedding-agent"
version = "0.0.1"
description = "The cezzis rag data embedding agent is designed as the second step in text embedding the cezzis.com data.  This agent receives the cleaned cocktail data in text format then attempts to embed it and store it in a vector database."
authors = [
    {name = "mtnvencenzo",email = "rvecchi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pydantic-settings (>=2.11.0)",
    "cezzis-kafka (>=0.0.4)",
    "cezzis-otel (>=0.0.4)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=4.0.0,<8.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

[tool.pyright]
# Allow accessing private members in test files
reportPrivateUsage = "none"
# More specific: only disable for test directory
exclude = []
ignore = []

# Alternative: Configure per-directory rules
[[tool.pyright.executionEnvironments]]
root = "test"
reportPrivateUsage = "none"

[[tool.pyright.executionEnvironments]]
root = "."
reportPrivateUsage = "warning"
